# wex

./: Cargo.toml  readme.md
src/: file_manager.rs  fs.rs  html.rs  http.rs  main.rs  ssl.rs
src/web/: index.html
