[package]
name = "wex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.2"
actix-web = { version = "4.7.0", features = ["openssl"] }
dirs = "5.0.1"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
openssl = "0.10.64"
rcgen = { version = "0.13.1", features = ["x509-parser"] }
